--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "@types/node": "20.11.30",
     "@types/react": "18.2.66",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.5"
   }
 }
